con el mongo key actualizado

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ CLOUDINARY_URL=cloudinary://486965187921226:TywSzVe4f1cwtVQ78LYW6ZvsK0s@dupfvqdz
 CLOUD_NAME=dupfvqdzi
 CLOUDINARY_API_KEY=486965187921226
 CLOUDINARY_SECRET=TywSzVe4f1cwtVQ78LYW6ZvsK0s
+MONGO_KEY=mongodb+srv://sotodiego37:<password>@mycluster.5wlzyju.mongodb.net/tuFrontend
