--- a/.env
+++ b/.env
@@ -1,7 +1,1 @@
-PORT=8000
-JWT_SECRET=N4Y3L1T3QU13R0
-CLOUDINARY_URL=cloudinary://486965187921226:TywSzVe4f1cwtVQ78LYW6ZvsK0s@dupfvqdzi
-CLOUD_NAME=dupfvqdzi
-CLOUDINARY_API_KEY=486965187921226
-CLOUDINARY_SECRET=TywSzVe4f1cwtVQ78LYW6ZvsK0s
-MONGO_KEY=mongodb+srv://dialfred:d1egoestaperro1302@mis-paginas.iygngnz.mongodb.net/tuFrontend
+nada por aqui xD
